--- a/config/.editorconfig
+++ b/config/.editorconfig
@@ -23,4 +23,10 @@ trim_trailing_whitespace = false
 
 [*.go]
 indent_style = tab
-indent_size = 1
+
+[{package.json,.travis.yml}]
+indent_style = space
+indent_size = 2
+
+[{Makefile, makefile}]
+indent_style = tab
