several fixes - instead of sh we use bash now for the pre-commit hook - md no longer requires trailing whitespaces - if the repo is initialized, do a commit with the files - change the order of some installations
Signed-off-by: Miguel Molina <miguel@erizocosmi.co>

--- a/config/.editorconfig
+++ b/config/.editorconfig
@@ -18,7 +18,7 @@ insert_final_newline = false
 [*.{js,ts,jsx,yml,json}]
 indent_size = 2
 
-[*.{diff,md}]
+[*.{diff}]
 trim_trailing_whitespace = false
 
 [*.go]
